[tool.poetry]
name = "space_console_game"
version = "0.1.0"
description = ""
authors = ["Danil Nikitin <d.nikitin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
